--- a/Project-001-Roman-Numerals-Converter/templates/result.html
+++ b/Project-001-Roman-Numerals-Converter/templates/result.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Clarusway Project - 001</title>
+    <title>NioyaTech Project - 001</title>
     <style>
         body {
             width: 600px;
@@ -37,7 +37,7 @@
 
 <body>
 
-    <div><img src="https://clarusway.com/wp-content/uploads/2020/06/clarusway_logo.png" /></div>
+    <div><img src="https://www.nioyatech.com/wp-content/uploads/2020/09/nioyalogo1.png" width="250" height="60" /></div>
 
     <h2>Project : Roman Numerals Converter Application</h2>
     <br>
