--- a/Project-001-Roman-Numerals-Converter/templates/index.html
+++ b/Project-001-Roman-Numerals-Converter/templates/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Clarusway Project - 001</title>
+  <title>NioyaTech Project - 001</title>
   <style>
     body {
       max-width: 600px;
@@ -59,7 +59,7 @@
 
 <body>
 
-  <div><img src="https://clarusway.com/wp-content/uploads/2020/06/clarusway_logo.png" /></div>
+  <div><img src="https://www.nioyatech.com/wp-content/uploads/2020/09/nioyalogo1.png" width="250" height="60" /></div>
 
   <h2>Project : Roman Numerals Converter Application</h2>
   <p>This application converts decimal numbers to Roman numerals. Only numbers from 1 to 3999 are allowed.</p><br>
