--- a/flask-01-02-hello-world-app-Jinja-Template/flask-02-Jinja_Template/templates/index.html
+++ b/flask-01-02-hello-world-app-Jinja-Template/flask-02-Jinja_Template/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My first Flask HTML</title>
+    <title>Fatih Tepe first Flask HTML</title>
 </head>
 <body>
     <h1>This is my first webpage with html file</h1>
