--- a/ProjectN-004-docker-swarm-deployment-of-phonebook-app-on-python-flask-mysql/templates/index.html
+++ b/ProjectN-004-docker-swarm-deployment-of-phonebook-app-on-python-flask-mysql/templates/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Clarusway Project - 004</title>
+  <title>Clarusway Project</title>
   <style>
     body {
       max-width: 600px;
